--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
-    <body>
-        Welcome!
-        This is Pranati Rao's website.
-    </body>
+
+<body>
+    <center>Welcome!</center><br>
+    This is Pranati Rao's website.
+</body>
+
 </html>
